Examples/test-suite/errors/doxygen_unclosed_tag.i
%module xxx

/**
 * Return a random variate with uniform distribution in the range [a,b), where a<b
 */
double uniform(double a, double b);
